--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -719,7 +719,7 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-s7KZKXKgX7 H1 {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-s7L2ieq1xP {
   background: #ff7f9f;
